--- a/.github/workflows/command_line.yaml
+++ b/.github/workflows/command_line.yaml
@@ -14,8 +14,13 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{matrix.python}}
+      - name: Install package
+        run: |
+          python -m pip install --upgrade pip
+          pip install .
       - name: Run tests
         run: |
+          cowsay "moo"
           # everything that we put in here is a terminal command
           # the behavior on github actions will be basically the same
           # as the behavior in the terminal on your own computer
